--- a/client/taxi-treasure/src/Components/AddItem.css
+++ b/client/taxi-treasure/src/Components/AddItem.css
@@ -1,4 +1,4 @@
-.formcontainer {
+/* .formcontainer {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -57,4 +57,4 @@ button {
 
 input {
   max-width: 500px;
-}
+} */
