--- a/client/taxi-treasure/src/Components/Home.css
+++ b/client/taxi-treasure/src/Components/Home.css
@@ -1,4 +1,4 @@
-.home-container {
+/* .home-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,4 +60,4 @@
   .card-img-top {
     height: 200px;
   }
-}
+} */
