--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -74,7 +74,7 @@ nav a:hover {
   color: black;
 }
 
-/* Responsive styles */
+
 @media (max-width: 768px) {
   .navbar {
     flex-direction: column;
@@ -92,4 +92,4 @@ nav a:hover {
     margin-left: 0;
     margin-bottom: 10px;
   }
-}
+} */
