created a footer and I changed some css styling

--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #ffd700;
 }
 
@@ -44,4 +44,4 @@ p {
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
-}
+} */
