--- a/client/taxi-treasure/src/Components/Login.css
+++ b/client/taxi-treasure/src/Components/Login.css
@@ -1,40 +1,72 @@
-/* body,
-html {
-  overflow: hidden;
-}
-
 .formcontainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #ffd700;
+  height: 100vh;
+  background-color: #f7f7f7;  
 }
 
 .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: white;
-  border: 1px solid black;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 40px;
+  text-align: center;
 }
 
 h1 {
-  margin: 0 0 20px 0;
+  font-size: 2rem;
+  margin-bottom: 40px;
+  color: #333333;
+}
+
+label {
+  display: block;
+  text-align: left;
+  font-size: 0.9rem;
+  margin-bottom: 5px;
+  color: #333333;
 }
 
 input {
+  display: block;
   width: 100%;
   padding: 10px;
-  margin-bottom: 20px;
-}
-
-button {
-  padding: 10px;
-  background-color: yellow;
+  border-radius: 3px;
   border: none;
-  cursor: pointer;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-a {
-  color: blue;
-} */
+button[type="submit"] {
+  background-color: #f1e9e9;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+button[type="submit"]:hover {
+  background-color: #ffffff;
+  color: #333333;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+span {
+  font-size: 0.9rem;
+  color: #333333;
+}
+
+span a {
+  color: #333333;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
+}
+
+span a:hover {
+  color: #00bfff;
+}
