--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -1,57 +1,69 @@
-/* .navbar {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: black;
-  color: white;
-  font-size: 18px;
+  background-color: #ffffff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
   display: flex;
   align-items: center;
-  font-size: 34px;
+  
+}
+#logoTitle{
+  font-size: 38px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .logo img {
-  width: 70px;
-}
-
-#treasure {
-  margin-left: 12px;
+  width: 40px;
+  margin-right: 20px;
 }
 
 .logo a {
-  color: yellow;
+  color: #000000;
   text-decoration: none;
+}
+
+#treasure {
+  width: 30px;
+  
 }
 
 .dropdown {
   position: relative;
 }
 
-.dropdown .dropbtn {
-  background-color: black;
-  color: yellow;
+.dropbtn {
+  background-color: transparent;
   border: none;
-  font-size: 34px;
+  color: #000000;
+  font-size: 20px;
   cursor: pointer;
+  padding: 0;
+  margin-right: 20px;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: black;
-  min-width: 160px;
   z-index: 1;
+  top: 100%;
+  left: 0;
+  padding: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-content a {
-  color: yellow;
-  padding: 12px 16px;
-  text-decoration: none;
   display: block;
+  color: #000000;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 5px 0;
 }
 
 .dropdown:hover .dropdown-content {
@@ -59,37 +71,55 @@
 }
 
 nav a {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 20px;
-  color: yellow;
-  background-color: black;
+  color: #000000;
   text-decoration: none;
-  transition: background-color 0.2s ease-in-out;
+  font-size: 20px;
+  margin-right: 20px;
 }
 
 nav a:hover {
-  background-color: yellow;
-  color: black;
+  text-decoration: underline;
 }
 
+nav a:last-child {
+  margin-right: 0;
+}
 
-@media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-  }
-  
+nav a svg {
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 768px) {
   .logo {
-    margin-bottom: 20px;
+    font-size: 18px;
   }
-  
+
+  #treasure {
+    display: none;
+  }
+
   .dropdown {
-    margin-top: 20px;
+    margin-right: auto;
   }
-  
+
+  .dropdown-content {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .dropdown-content a {
+    padding: 10px 0;
+  }
+
+  .dropbtn {
+    margin-right: 0;
+  }
+
   nav a {
-    margin-left: 0;
-    margin-bottom: 10px;
+    margin-right: 0;
   }
-} */
+}
