--- a/client/taxi-treasure/src/Components/Signup.css
+++ b/client/taxi-treasure/src/Components/Signup.css
@@ -1,88 +1,71 @@
-/* .formcontainer {
+.formcontainer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #ffd700;
 }
 
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 2rem;
+  border: 2px solid #ccc;
   border-radius: 10px;
-  background-color: white;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 350px;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 300px;
+.form h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
-h1 {
-  font-size: 28px;
-  margin-bottom: 20px;
-  color: #333333;
-}
-
-label {
-  display: none;
-}
-
-input {
+.form input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
   width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
+}
+
+.form button {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
   border-radius: 5px;
   border: none;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-}
-
-button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 20px;
-  border-radius: 5px;
-  border: none;
-  background-color: #ffce00;
-  color: white;
-  font-weight: bold;
+  background-color: #008080;
+  color: #fff;
   cursor: pointer;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  width: 100%;
 }
 
-button:hover {
-  background-color: #f0c400;
+.form button:hover {
+  background-color: #005353;
 }
 
-a {
-  color: #333333;
+.form span {
+  margin-top: 1rem;
+  font-size: 0.8rem;
+}
+
+.form a {
+  color: #008080;
   text-decoration: none;
 }
 
-a:hover {
+.form a:hover {
   text-decoration: underline;
 }
 
-.form {
-  padding: 20px;
-  margin-bottom: 50px; 
+.form label {
+  display: block;
+  margin-bottom: 0.5rem;
 }
 
-h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.form input[type="checkbox"] {
+  margin-right: 0.5rem;
 }
-
-input {
-  margin-bottom: 10px;
-}
-
-button {
-  margin-top: 10px;
-  margin-bottom: 10px;
-} */
