--- a/client/taxi-treasure/src/Components/AddItem.css
+++ b/client/taxi-treasure/src/Components/AddItem.css
@@ -1,19 +1,21 @@
-/* .formcontainer {
+.formcontainer {
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #ffd700;
+  
 }
 
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;
+  padding: 2rem;
+  border: 2px solid #ccc;
   border-radius: 10px;
-  background-color: white;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 350px;
 }
 
 form {
@@ -24,8 +26,8 @@ form {
 }
 
 h1 {
-  font-size: 28px;
-  margin-bottom: 20px;
+  font-size: 2rem;
+  margin-bottom: 40px;
   color: #333333;
 }
 
@@ -48,13 +50,13 @@ textarea {
 }
 
 button {
-  width: 40%;
-  padding: 10px;
-  margin-top: 20px;
-  border-radius: 5px;
-  border: #333333;
+  background-color: #F7F78F;
+  color: #007562;
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
-input {
-  max-width: 500px;
-} */
