--- a/client/taxi-treasure/src/Components/AllFound.css
+++ b/client/taxi-treasure/src/Components/AllFound.css
@@ -3,6 +3,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.2s ease-in-out;
   text-align: center; 
+  background-color: #C3FCF2;
 }
 
 .card-found:hover {
@@ -45,7 +46,7 @@
   }
 }
 .card {
-  height: 300px;
+  height: 280px;
   width: 300px;
 }
 
