--- a/client/taxi-treasure/src/Components/Login.css
+++ b/client/taxi-treasure/src/Components/Login.css
@@ -1,17 +1,20 @@
-.formcontainer {
+.loginformcontainer {
+  margin-top: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  background-color: #f7f7f7;  
 }
 
 .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem;
+  border: 2px solid #ccc;
+  border-radius: 10px;
   background-color: #ffffff;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  padding: 40px;
-  text-align: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 350px;
 }
 
 h1 {
@@ -39,8 +42,8 @@ input {
 }
 
 button[type="submit"] {
-  background-color: #f1e9e9;
-  color: #ffffff;
+  background-color: #007562;
+  
   padding: 10px 20px;
   border-radius: 3px;
   border: none;
