--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -3,16 +3,15 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #adac9a;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
   display: flex;
   align-items: center;
-  
 }
-#logoTitle{
+#logoTitle {
   font-size: 38px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -30,7 +29,6 @@
 
 #treasure {
   width: 30px;
-  
 }
 
 .dropdown {
@@ -75,10 +73,6 @@ nav a {
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
-}
-
-nav a:hover {
-  text-decoration: underline;
 }
 
 nav a:last-child {
