--- a/client/taxi-treasure/src/Components/Signup.css
+++ b/client/taxi-treasure/src/Components/Signup.css
@@ -1,8 +1,9 @@
 .formcontainer {
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  
 }
 
 .form {
@@ -12,60 +13,79 @@
   padding: 2rem;
   border: 2px solid #ccc;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 350px;
 }
 
-.form h1 {
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+}
+
+h1 {
   font-size: 2rem;
-  margin-bottom: 1rem;
+  margin-bottom: 40px;
+  color: #333333;
 }
 
-.form input {
-  margin-bottom: 1rem;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  width: 100%;
+label {
+  display: none;
 }
 
-.form button {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  border: none;
-  background-color: #008080;
-  color: #fff;
-  cursor: pointer;
-  width: 100%;
-}
-
-.form button:hover {
-  background-color: #005353;
-}
-
-.form span {
-  margin-top: 1rem;
-  font-size: 0.8rem;
-}
-
-.form a {
-  color: #008080;
-  text-decoration: none;
-}
-
-.form a:hover {
-  text-decoration: underline;
-}
-
-.form label {
+input {
   display: block;
-  margin-bottom: 0.5rem;
+  width: 100%;
+  padding: 10px;
+  border-radius: 3px;
+  border: none;
+  margin-bottom: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.form input[type="checkbox"] {
-  margin-right: 0.5rem;
+button {
+  background-color: #007562;  
+  padding: 10px 20px;
+  border-radius: 3px;
+  border: none;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #ffffff;
+  color: #333333;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+a {
+  color: #333333;
+  color: #333333;
+  text-decoration: none;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
+}
+
+
+
+.form {
+  padding: 20px;
+  margin-bottom: 50px; 
+}
+
+h1 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+button {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
