--- a/client/taxi-treasure/src/Components/UserItems.css
+++ b/client/taxi-treasure/src/Components/UserItems.css
@@ -1,59 +1,56 @@
 .user-items-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 70px;
-    border: 2px solid #333;
-    padding: 20px;
-    border-radius: 10px;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 40px;
+  padding: 20px;
+}
+
+.items-list-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.lost-items-container,
+.found-items-container {
+  display: flex;
+  margin: 10px;
+}
+
+.lost-items-title,
+.found-items-title {
+  margin: 0;
+  text-align: left;
   
-  .items-list-container {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-  
-  .lost-items-container,
-  .found-items-container {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-  }
-  
-  .lost-items-title,
-  .found-items-title {
-    margin: 0;
-    text-align: center;
-  }
-  
-  .lost-items-list,
-  .found-items-list {
-    list-style: none;
-    padding: 0;
-    margin: 10px 0;
-  }
-  
-  .lost-item,
-  .found-item {
-    border: 1px solid #333;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px 0;
-  }
-  
-  .item-details-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .item-name {
-    font-size: 1.5rem;
-    margin: 0;
-  }
-  
-  .delete-item-button {
-    margin-top: 10px;
-  }
-  
+}
+
+.lost-items-list,
+.found-items-list {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0;
+  margin-top: 50px;
+}
+
+.lost-item,
+.found-item {
+  padding: 10px;
+  margin: 10px 0;
+  border: solid 1px black;
+}
+
+.item-details-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.item-name {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+.delete-item-button {
+  margin-top: 10px;
+}
