added faq, about in the navbar, changed some colors

--- a/client/taxi-treasure/src/App.css
+++ b/client/taxi-treasure/src/App.css
@@ -1,3 +1,6 @@
 body{
-    background-color: #659B92;
+    background-color: #88754B;
+    font-family: 'Edu NSW ACT Foundation', cursive;
+    
 }
+
