--- a/client/taxi-treasure/src/Components/AddItem.css
+++ b/client/taxi-treasure/src/Components/AddItem.css
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .form {
@@ -22,7 +21,6 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
 }
 
 h1 {
@@ -41,7 +39,6 @@ label {
 input,
 select,
 textarea {
-  width: 280px;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
@@ -50,7 +47,7 @@ textarea {
 }
 
 button {
-  background-color: #F7F78F;
+  background-color: #f7f78f;
   color: #007562;
   padding: 10px 20px;
   border-radius: 3px;
@@ -59,4 +56,3 @@ button {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
-
