--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #adac9a;
+  background-color: #D3E388;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -12,8 +12,7 @@
   align-items: center;
 }
 #logoTitle {
-  font-size: 38px;
-  font-family: 'Notable', sans-serif;
+  font-size: 44px;  
 }
 
 .logo img {
@@ -22,7 +21,7 @@
 }
 
 .logo a {
-  color: #000000;
+  color: black;
   text-decoration: none;
 }
 
@@ -38,7 +37,7 @@
   background-color: transparent;
   border: none;
   color: #000000;
-  font-size: 20px;
+  font-size: 30px;
   cursor: pointer;
   padding: 0;
   margin-right: 20px;
