fixed an issue with the tokken in the contact us

--- a/client/taxi-treasure/src/App.css
+++ b/client/taxi-treasure/src/App.css
@@ -1,6 +1,3 @@
-body{
-    background-color: #88754B;
-    font-family: 'Edu NSW ACT Foundation', cursive;
-    
+body {
+  font-family: "Edu NSW ACT Foundation", cursive;
 }
-
