--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #D3E388;
+  background-color: #cbcfcd96;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
