--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -1,43 +1,9 @@
-.taxiSign1 {
-  height: 200px;
-  width: auto;
-  display: block;
-  margin: 0 auto;
-  padding-top: 20px;
-  margin-right: 250px;
-}
-
-.movingTaxi {
-  height: 200px;
-  width: auto;
-  display: block;
-  margin: 0 auto;
-  padding-top: 20px;
-  margin-left: 250px;
-}
-
-@media screen and (max-width: 768px) {
-  .taxiSign1 {
-    height: 150px;
-  }
-
-  .taxiSign2 {
-    height: 150px;
-  }
-
-  .movingTaxi {
-    height: 75px;
-  }
-
-  .d-flex.flex-column.justify-content-center {
-    align-items: center;
-  }
+.my-5 {
+  margin-left: 180px;
 }
 
 p {
   text-align: justify;
-  text-justify: inter-word;
   font-size: 22px;
   line-height: 1.5;
-  margin-bottom: 30px;
 }
