--- a/client/taxi-treasure/src/Components/AddItem.css
+++ b/client/taxi-treasure/src/Components/AddItem.css
@@ -1,11 +1,11 @@
-.formcontainer {
+.formContainerAdd {
   margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.form {
+.formAdd {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,10 +17,10 @@
   width: 350px;
 }
 
-form {
+.form-group {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;  
 }
 
 h1 {
@@ -36,23 +36,37 @@ label {
   color: #333333;
 }
 
+#name,
+#description,
+#location,
+#date,
+#status,
+#carBrand {
+  width: 300px;
+}
+
 input,
 select,
 textarea {
   padding: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   border-radius: 5px;
   border: 1px solid #333333;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
 }
 
-button {
-  background-color: #f7f78f;
-  color: #007562;
+#btnAdd {
+  background-color: #f5db4a;
+  color: black;
   padding: 10px 20px;
   border-radius: 3px;
   border: none;
   font-size: 1rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+}
+
+#btnAdd :hover {
+  background-color: #ffffff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
