--- a/client/taxi-treasure/src/Components/AllFound.css
+++ b/client/taxi-treasure/src/Components/AllFound.css
@@ -3,7 +3,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   transition: all 0.2s ease-in-out;
   text-align: center; 
-  background-color: #E8E2D7;
+  background-color: #e8e2d7;
 }
 
 .card-found:hover {
