--- a/client/taxi-treasure/src/Components/Login.css
+++ b/client/taxi-treasure/src/Components/Login.css
@@ -1,11 +1,11 @@
 .loginformcontainer {
-  margin-top: 250px;
+  margin-top: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.form {
+.formLogin {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,6 +15,14 @@
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 350px;
+}
+
+#formLogin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px; 
+
 }
 
 h1 {
@@ -42,8 +50,7 @@ input {
 }
 
 button[type="submit"] {
-  background-color: #007562;
-  
+  background-color: #f5db4a;  
   padding: 10px 20px;
   border-radius: 3px;
   border: none;
