--- a/client/taxi-treasure/src/Components/Signup.css
+++ b/client/taxi-treasure/src/Components/Signup.css
@@ -1,12 +1,12 @@
-.formcontainer {
-  margin-top: 100px;
+.formcontainerSignup {
+  margin-top: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   
 }
 
-.form {
+.formSignup {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,16 +18,15 @@
   width: 350px;
 }
 
-form {
+#formSignup {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 300px;    
 }
 
-h1 {
-  font-size: 2rem;
-  margin-bottom: 40px;
+#createAccount {
+  font-size: 2rem;  
   color: #333333;
 }
 
@@ -38,7 +37,7 @@ label {
 input {
   display: block;
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   border-radius: 3px;
   border: none;
   margin-bottom: 20px;
@@ -46,7 +45,7 @@ input {
 }
 
 button {
-  background-color: #007562;  
+  background-color: #4e2525;  
   padding: 10px 20px;
   border-radius: 3px;
   border: none;
@@ -61,8 +60,7 @@ button:hover {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-a {
-  color: #333333;
+a {  
   color: #333333;
   text-decoration: none;
   font-weight: 600;
