--- a/client/taxi-treasure/src/Components/UserItems.css
+++ b/client/taxi-treasure/src/Components/UserItems.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   margin-top: 40px;
-  padding: 20px;
-  
+  padding: 20px;  
+  border-radius: 10px;
 }
 
 .items-list-container {
@@ -18,6 +18,7 @@
 .found-items-container {
   display: flex;
   margin: 10px;
+ 
 }
 
 .lost-items-title,
@@ -57,4 +58,10 @@
 
 .delete-item-button {
   margin-top: 10px;
+  background-color: #f5894a;
+}
+
+.edit-item-button{
+  margin-top: 10px;
+  background-color: #f5db4a;
 }
