--- a/client/taxi-treasure/src/Components/Signup.css
+++ b/client/taxi-treasure/src/Components/Signup.css
@@ -45,7 +45,7 @@ input {
 }
 
 button {
-  background-color: #4e2525;  
+  background-color: #f5db4a;  
   padding: 10px 20px;
   border-radius: 3px;
   border: none;
