--- a/client/taxi-treasure/src/Components/Mailer.css
+++ b/client/taxi-treasure/src/Components/Mailer.css
@@ -1,43 +1,50 @@
+.mailer-container{
+  margin-top: 50px;
+  display: block;
+ margin-left: 450px;
+}
 .mailer-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
-    margin: 0 auto;
-    
-  }
-  
-  .mailer-form label {
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-  }
-  
-  .mailer-form input[type="text"],
-  .mailer-form input[type="password"],
-  .mailer-form textarea {
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1rem;
-    width: 300px;
-  }
-  
-  .mailer-form textarea {
-    resize: vertical;
-  }
-  
-  .submit-btn {
-    padding: 0.5rem 1rem;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 1rem;
-    width: 100px;
-  }
-  
-  .submit-btn:hover {
-    background-color: #0056b3;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 380px;
+}
+
+.mailer-form label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.mailer-form input[type="text"],
+.mailer-form input[type="password"],
+.mailer-form textarea {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  width: 300px;
+}
+
+.mailer-form textarea {
+  resize: vertical;
+}
+
+.submit-btn {
+  padding: 0.5rem 1rem;
+  background-color: #f5db4a;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 100px;
+}
+
+.submit-btn:hover {
+  background-color: white;
+}
