--- a/client/taxi-treasure/src/Components/Contact.css
+++ b/client/taxi-treasure/src/Components/Contact.css
@@ -1,22 +1,37 @@
-.contact-container{
-    margin-top: 50px;
+.contact-container {
+  margin-top: 50px;
   display: block;
- margin-left: 250px;
+  margin-left: 250px;
 }
+
+.contactUs-form {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    border: 2px solid #ccc;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 380px;
+    margin-left: 150px;
+  }
+  
 .submit-btn {
-    background-color: #f5db4a;
-    color: black;
+  background-color: #f5db4a;
+  color: black;
 }
 
-.submit-btn:hover{
-    background-color: white;
+.submit-btn:hover {
+  background-color: white;
 }
 
-input, textarea {
-    width: 300px;
+input,
+textarea {
+  width: 300px;
 }
 
-#contact-noToken{
-    margin-left: 200px;
-    margin-top: 50px;
+#contact-noToken {
+  margin-left: 200px;
+  margin-top: 50px;
 }
+
