made it responsive

--- a/client/taxi-treasure/src/App.css
+++ b/client/taxi-treasure/src/App.css
@@ -1,6 +1,14 @@
 body {
   font-family: "Edu NSW ACT Foundation", cursive;
   background-image: url("./Components/icons/background2.png");
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
+}
+
+@media (max-width: 900px) {
+  body {
+    background-image: url("./Components/icons/background3.png");
+    background-repeat: repeat;
+    background-size: cover;
+  }
 }
