--- a/client/taxi-treasure/src/Components/Home.css
+++ b/client/taxi-treasure/src/Components/Home.css
@@ -14,3 +14,37 @@
   font-size: 3.5rem;
   font-weight: bold;
 }
+
+@media (max-width: 1280px) {
+  .homeContainer {
+    flex-direction: column;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+
+  #moto {
+    width: auto;
+    max-width: 700px;
+  }
+
+  .display-2 {
+    font-size: 2.5rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .homeContainer {
+    flex-direction: column;
+    margin-right: 0;
+    margin-left: 20px;
+  }
+
+  #moto {
+    width: auto;
+    max-width: 700px;
+  }
+
+  .display-2 {
+    font-size: 2.5rem;
+  }
+}
