--- a/client/taxi-treasure/src/Components/Footer.css
+++ b/client/taxi-treasure/src/Components/Footer.css
@@ -3,7 +3,7 @@
     bottom: 0;
     width: 100%;
     height: 30px;
-    background-color: #e1d176;
+    background-color: #cbcfcd;
     display: flex;    
     justify-content: center;    
   }
