--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -1,11 +1,21 @@
-@media (max-width: 768px) {
+.mb-4 {
+  font-size: 22px;
+  font-weight: bold;
+  line-height: 1.3;
+  background-color: #fed401b4;
+  border-radius: 5px;
+}
+
+@media (max-width: 900px) {
   .my-5 {
-    margin-left: 0;
+    margin-left: 20;
     margin-right: 20px;
   }
 
-  p {
+  .mb-4 {
     font-size: 18px;
     line-height: 1.3;
+    font-weight: bold;
+    background-color: #ffd15b;
   }
 }
