--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #cbcfcd96;
+  background-color: #cbcfcd;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -12,7 +12,7 @@
   align-items: center;
 }
 #logoTitle {
-  font-size: 44px;  
+  font-size: 44px;
 }
 
 .logo img {
@@ -48,22 +48,27 @@
   position: absolute;
   z-index: 1;
   top: 100%;
-  left: 0;
+  left: 5px;
+  width: 150px;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #cbcfcd;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .dropdown-content a {
   display: block;
   color: #000000;
-  font-size: 16px;
-  text-decoration: none;
+  font-size: 20px;
+  text-decoration: underline;
   padding: 5px 0;
 }
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+#a:hover {
+  background-color: #f4f7f5;
+  border-radius: 8px;
 }
 
 nav a {
@@ -80,7 +85,6 @@ nav a:last-child {
 nav a svg {
   margin-right: 5px;
 }
-
 
 @media (max-width: 600px) {
   .navbar {
