--- a/client/taxi-treasure/src/App.css
+++ b/client/taxi-treasure/src/App.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Edu NSW ACT Foundation", cursive;
   background-image: url("./Components/icons/background2.png");
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
