--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -1,9 +1,10 @@
 .mb-4 {
   font-size: 22px;
   font-weight: bold;
-  line-height: 1.3;
-  background-color: #fed401b4;
+  line-height: 1.5;
+  background-color: transparent;
   border-radius: 5px;
+  color: black;
 }
 
 @media (max-width: 900px) {
@@ -16,6 +17,6 @@
     font-size: 18px;
     line-height: 1.3;
     font-weight: bold;
-    background-color: #ffd15b;
+    background-color: #2d567c91;
   }
 }
