--- a/client/taxi-treasure/src/Components/Footer.css
+++ b/client/taxi-treasure/src/Components/Footer.css
@@ -3,24 +3,25 @@
     bottom: 0;
     width: 100%;
     height: 30px;
-    background-color: #cbcfcd;
+    background-color: transparent;
     display: flex;    
     justify-content: center;    
   }
   
   .footer-text {
     font-size: 18px;
-    color: #000000;
+    color: white;
     
   }
   
   .social-links {   
     padding-right: 18px;
+   
   }
   
   .social-links a {
     margin: 0 5px;
-    color: #666;
+    color: white;
     font-size: 18px;
   }
   
