--- a/client/taxi-treasure/src/Components/Home.css
+++ b/client/taxi-treasure/src/Components/Home.css
@@ -2,12 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 30px;
-  margin-right: 550px;
+  margin-top: 40px;
+  margin-right: 550px;  
 }
 
 #moto {
   width: 700px;
+  background-color: transparent;
+}
+
+#title {
+  font-family: "Bungee Spice", cursive; 
 }
 
 .display-2 {
