--- a/client/taxi-treasure/src/Components/Navbar.css
+++ b/client/taxi-treasure/src/Components/Navbar.css
@@ -3,86 +3,37 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #cbcfcd;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  background-color: transparent;
+  box-shadow: none;
+  
 }
 
-.logo {
+nav {
   display: flex;
   align-items: center;
 }
-#logoTitle {
-  font-size: 44px;
+
+.nav-links {
+  display: flex;
+  align-items: center;
 }
 
-.logo img {
-  width: 40px;
-  margin-right: 20px;
-}
-
-.logo a {
-  color: black;
-  text-decoration: none;
-}
-
-#treasure {
-  width: 40px;
-}
-
-.dropdown {
-  position: relative;
-}
-
-.dropbtn {
-  background-color: transparent;
-  border: none;
-  color: #000000;
-  font-size: 30px;
-  cursor: pointer;
-  padding: 0;
-  margin-right: 20px;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  z-index: 1;
-  top: 100%;
-  left: 5px;
-  width: 150px;
-  padding: 10px;
-  background-color: #cbcfcd;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.dropdown-content a {
-  display: block;
-  color: #000000;
-  font-size: 20px;
-  text-decoration: underline;
-  padding: 5px 0;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-#a:hover {
-  background-color: #f4f7f5;
-  border-radius: 8px;
-}
-
-nav a {
-  color: #000000;
+.nav-link {
+  color: white;
   text-decoration: none;
   font-size: 20px;
   margin-right: 20px;
 }
 
-nav a:last-child {
+.nav-link:hover{
+  color: gold;
+}
+
+.nav-link:last-child {
   margin-right: 0;
 }
 
-nav a svg {
+.nav-link svg {
   margin-right: 5px;
 }
 
@@ -92,25 +43,7 @@ nav a svg {
     padding: 20px;
   }
 
-  .logo {
-    margin-bottom: 20px;
-  }
-
-  #logoTitle {
-    font-size: 30px;
-  }
-
-  .logo img {
-    width: 30px;
-    margin-right: 10px;
-  }
-
-  .dropbtn {
-    font-size: 24px;
-    margin-right: 10px;
-  }
-
-  nav a {
+  .nav-link {
     font-size: 16px;
     margin-right: 10px;
   }
