--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -4,7 +4,7 @@
   line-height: 2;
   background-color: transparent;
   border-radius: 5px;
-  color: black;  
+  color: white;  
   margin-left: 80px;
 }
 
