--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -2,7 +2,7 @@
   font-size: 27px;
   font-weight: bold;
   line-height: 1.9;
-  background-color: transparent;
+  background-color: #5bf8e8af;
   border-radius: 5px;
   color: white;  
   margin-left: 80px;
