--- a/client/taxi-treasure/src/Components/About.css
+++ b/client/taxi-treasure/src/Components/About.css
@@ -4,7 +4,7 @@
   line-height: 1.9;
   background-color: #5bf8e8af;
   border-radius: 5px;
-  color: white;  
+  color: black;  
   margin-left: 80px;
 }
 
